Fixed: Some sites not wrapping properly, width 100% fix

--- a/site-sass/tom/site.post-listing.scss
+++ b/site-sass/tom/site.post-listing.scss
@@ -140,6 +140,7 @@ hr {
   margin-bottom: 0px;
   margin: 5px 0 5px 0;
 	word-wrap: break-word;
+	width: 100%;
 }
 
 .heading-image h4,
